add a user interface
there are 4 functions:
 new-wallet    - to define and deploy (publish) a wallet
 import-wallet - to load a wallet from the blockchain, or from JSON
 view-wallet   - to edit a wallet (name and owner labels), save locally
 transaction   - to create, sign and execite a transaction

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-node_modules
-build
-*.orig
+*~
+ui/build/*
+ui/node_modules/*
+ui/node_modules/*
+ui/src/js/autoVersion.js
+ui/src/js/autoVersion.txt
